Edited wiki page Nov20meeting through web user interface.

--- a/wiki/Nov20meeting.wiki
+++ b/wiki/Nov20meeting.wiki
@@ -1,8 +1,8 @@
-Discussed:
-Studio name: WXXST
-Project Form: Small group or individual
-Next Meeting: Dec some time
-TODO: Jiaozhu-add project code+provide example websites.
+----Discussed----
+* Studio name: WXXST
+* Project Form: Small group or individual
+* Next Meeting: Dec some time
+* TODO: Jiaozhu-add project code+provide example websites.
            Others-install linux and get familiar with svn
            Meng-learn Macport and also get familiar with svn
            All-learn java, install Android SDK
